[gd_scene load_steps=15 format=3 uid="uid://7apob1ku4abi"]

[ext_resource type="Script" uid="uid://ct3ddqmajxc4a" path="res://enemies/tank_melee/tank_melee.gd" id="1_2el2d"]
[ext_resource type="Texture2D" uid="uid://vnpprg6155pk" path="res://assets/melee_tank/melee_tank.png" id="2_e2e8j"]
[ext_resource type="PackedScene" uid="uid://vfox1tr302a" path="res://components/hitbox.tscn" id="2_sd0kh"]
[ext_resource type="PackedScene" uid="uid://cw6vrpa8b0u16" path="res://components/hurtbox.tscn" id="3_te1yc"]
[ext_resource type="PackedScene" uid="uid://bwsmr01fo5ush" path="res://components/knockback_receiver.tscn" id="4_ajovx"]
[ext_resource type="PackedScene" uid="uid://oggpcil8kah2" path="res://particles/slow_bursts.tscn" id="6_kycy5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_te1yc"]
size = Vector2(21, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sd0kh"]
size = Vector2(12, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ajovx"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_e2e8j"]
resource_name = "moving"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("slow_bursts:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kycy5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("slow_bursts:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_eu7ly"]
resource_name = "attack"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("slow_bursts:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kycy5"]
_data = {
&"RESET": SubResource("Animation_kycy5"),
&"attack": SubResource("Animation_eu7ly"),
&"moving": SubResource("Animation_e2e8j")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_e2e8j"]
radius = 33.24154

[node name="tank_melee" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_2el2d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_e2e8j")
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.5, 0.5)
shape = SubResource("RectangleShape2D_te1yc")

[node name="hitbox" parent="." instance=ExtResource("2_sd0kh")]
collision_layer = 0
monitoring = false
damage = 2
knockback_strength = 500

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2(11, 0)
shape = SubResource("RectangleShape2D_sd0kh")

[node name="hurtbox" parent="." instance=ExtResource("3_te1yc")]
visible = false
collision_layer = 4
collision_mask = 0
max_hp = 4

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource("RectangleShape2D_ajovx")

[node name="knockback_receiver" parent="." node_paths=PackedStringArray("body") instance=ExtResource("4_ajovx")]
body = NodePath("..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kycy5")
}

[node name="slow_bursts" parent="." instance=ExtResource("6_kycy5")]
position = Vector2(-16, 1)

[node name="attack_area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
position = Vector2(38, 1)
shape = SubResource("CircleShape2D_e2e8j")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="knockback_values" from="hurtbox" to="." method="_on_hurtbox_knockback_values"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]

[editable path="hitbox"]
[editable path="hurtbox"]
